--- a/index.html
+++ b/index.html
@@ -30,9 +30,8 @@
         <p>当ページ開いていただいてありがとうございます
 技大で学生しています</p>
 
-<p>100NLPPracticeは
-東北大学100ノックのコードです:
-<a href="http://www.cl.ecei.tohoku.ac.jp/index.php?%E8%A8%80%E8%AA%9E%E5%87%A6%E7%90%86100%E6%9C%AC%E3%83%8E%E3%83%83%E3%82%AF">http://www.cl.ecei.tohoku.ac.jp/index.php?%E8%A8%80%E8%AA%9E%E5%87%A6%E7%90%86100%E6%9C%AC%E3%83%8E%E3%83%83%E3%82%AF</a></p>
+<p>100NLPPracticeは<a href="http://www.cl.ecei.tohoku.ac.jp/index.php?%E8%A8%80%E8%AA%9E%E5%87%A6%E7%90%86100%E6%9C%AC%E3%83%8E%E3%83%83%E3%82%AF">東北大学100ノック</a>のコードです</p>
+
 
 <p>Contact me:
 <a href="mailto:hiroshi.matsumoto.750@facebook.com">hiroshi.matsumoto.750@facebook.com</a>
