--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
+	<a href="aboutme.html">aboutme</a>
         <p>当ページ開いていただいてありがとうございます
 技大で学生しています</p>
 
