--- a/index.html
+++ b/index.html
@@ -1,50 +1,53 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-
   <head>
-    <meta charset='utf-8' />
-    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="Hiroshimatsumoto.github.io : " />
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <title>Hiroshimatsumoto.github.io by HiroshiMatsumoto</title>
+    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+    <script src="javascripts/respond.js"></script>
+    <!--[if lt IE 9]>
+      <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+    <!--[if lt IE 8]>
+    <link rel="stylesheet" href="stylesheets/ie.css">
+    <![endif]-->
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
-
-    <title>Hiroshimatsumoto.github.io</title>
   </head>
-
   <body>
+      <div id="header">
+        <nav>
+          <li class="fork"><a href="https://github.com/HiroshiMatsumoto">View On GitHub</a></li>
+        </nav>
+      </div><!-- end header -->
 
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/HiroshiMatsumoto">View on GitHub</a>
+    <div class="wrapper">
 
-          <h1 id="project_title">Hiroshimatsumoto.github.io</h1>
-          <h2 id="project_tagline"></h2>
+      <section>
+        <div id="title">
+          <h1>Hiroshimatsumoto.github.io</h1>
+          <p></p>
+          <hr>
+          <span class="credits left">Project maintained by <a href="https://github.com/HiroshiMatsumoto">HiroshiMatsumoto</a></span>
+          <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></span>
+        </div>
 
-        </header>
-    </div>
-
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
-	<a href="aboutme.html">aboutme</a>
         <p>当ページ開いていただいてありがとうございます
 技大で学生しています</p>
 
-<p>Contact me:
-<a href="mailto:hiroshi.matsumoto.750@facebook.com">hiroshi.matsumoto.750@facebook.com</a>
-<a href="mailto:DummyWitty@twitter.com">DummyWitty@twitter.com</a></p>
+<p>Contact me:</p>
+
+<ul>
+<li><a href="mailto:hiroshi.matsumoto.750@facebook.com">hiroshi.matsumoto.750@facebook.com</a></li>
+<li><a href="mailto:DummyWitty@twitter.com">DummyWitty@twitter.com</a></li>
+</ul>
       </section>
-    </div>
 
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
-      </footer>
     </div>
-
+    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
     
-
   </body>
 </html>
